[package]
name = "torman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
dotenv = "0.15.0"
reqwest = "0.12.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
scraper = "0.19.0"
